# RSRA-4B

./: .gitignore  CITATION.cff  Idea 1 RSRA-4B.md  LICENSE  README.md  challenge_description.md  goals_and_nongoals.md  pyproject.toml  requirements.txt
docs/: architecture_deep_dive.md  architecture_proof_plan.md  comparison_matrix.md  deep_architectural_retrospective.md  frontier_eval_prompts.md  generate_pdf.py  h100_high_capacity_plan.md  mathematical_foundations.md  scientific_documentation.md  scientific_paper.html  scientific_paper.tex
docs/internal/: h100_high_capacity_plan.md
results/algorithmic_benchmark/: algorithmic_results.json
results/generative_benchmark/: generative_results.json
results/generative_benchmark_complex/: baseline_model.pt  baseline_phase_1.pt  baseline_phase_2.pt  baseline_phase_3.pt  generative_results.json  rsra_model.pt  rsra_phase_1.pt  rsra_phase_2.pt  rsra_phase_3.pt
results/generative_benchmark_standard/: baseline_model.pt  baseline_phase_1.pt  baseline_phase_2.pt  baseline_phase_3.pt  generative_results.json  rsra_model.pt  rsra_phase_1.pt  rsra_phase_2.pt  rsra_phase_3.pt
scripts/: README_RUNPOD.md  benchmark_algorithmic.py  benchmark_hierarchy.py  eval_generative_savings.py  plot_comparison_results.py  plot_generative_results.py  runpod_eval_fix.py  runpod_setup.sh  runpod_train.py  runpod_train_generative.py  sanity_check.py  test_checker_fix.py
tests/: test_checker.py  test_collapse_benchmark.py  test_complex_generative.py  test_convergence.py  test_critical_fixes.py  test_generative_pipeline.py  test_generator.py  test_hierarchy.py  test_joint_loss.py  test_kv_cache_profiling.py  test_reasoning_decay.py  test_refinement.py  test_review_fixes.py  test_rsra_block.py  test_training_integration.py
(+49 files in other folders)
